# Qwen3-TTS-Fine

./: .gitignore  pyproject.toml
benchmark/: README.md
benchmark/candidate8_v2_audio_compare_native_vs_faster_v1/: RESULTS.md  audio_compare_metrics.json
benchmark/candidate8_v2_http_v2/: RESULTS.md  http_benchmark_zh_formal_metrics.json
benchmark/candidate8_v2_ws_compile_v1/: RESULTS.md  ws_benchmark_zh_formal_metrics.json
benchmark/candidate8_v2_ws_faster_v1/: RESULTS.md  ws_benchmark_zh_formal_metrics.json
benchmark/candidate8_v2_ws_v1/: notes.md  ws_benchmark_metrics.json
benchmark/candidate8_v2_ws_v2/: RESULTS.md  ws_benchmark_metrics.json  ws_benchmark_zh_formal_metrics.json
benchmark/ws_sdpa_vs_fa2_20260316/: README.md  ws_benchmark_fa2.json  ws_benchmark_sdpa.json
faster_qwen3_tts_integration/: README.md  __init__.py  contracts.py
faster_qwen3_tts_integration/docs/: compatibility.md
faster_qwen3_tts_integration/scripts/: __init__.py  export_merged_model.py  smoke_test.py
faster_qwen3_tts_integration/tests/: test_smoke_contract.py
finetuning/: prepare_data.py
lora_finetuning/: EXPERIMENT_CATALOG.md  IMPLEMENTATION_PLAN.md  LORA_QUALITY_STABILITY_GUIDE.md  NEXT_SESSION_QUICKSTART.md  README.md  VALIDATION_TEMPLATE.md  __init__.py  common.py  convert_resources_manifest.py  export_custom_voice.py  generate_yachiyo_multilingual_samples.py  inference_with_lora.py  sft_12hz_lora.py
lora_finetuning/configs/: real_smoke_local_1p7b.yaml  (+7 more)
streaming_lora_service/: README.md  __init__.py  concurrent_benchmark.py  http_streaming_benchmark.py  quality_regression.py  sampling_sensitivity.py  ws_benchmark.py
tests/: test_lora_smoke.py
vllm_omni_service/: README.md
(+82 files in other folders)
